--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
@@ -90,8 +90,8 @@
         </div>
     </div>
 
-    {% for project in projects %}
-        <div class="project-list">
+    <div class="project-list">
+        {% for project in projects %}
             <!-- Project Card -->
             <div class="project-card">
                 <div class="project-icon">
@@ -130,7 +130,7 @@
                     </button>
                 </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
 
