--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_project_page.html
@@ -31,7 +31,7 @@
                         <p>Schedule Update</p>
                         <span>Yesterday</span>
                     </div>
-                    <p class="short-description">General meeting at 10:30AM on Jan 3, 202 General meeting at 10:30AM on Jan 3, 202</p>
+                    <p class="short-description">General meeting at 10:30AM on Jan 3, 202 General meeting at 10:30AM on Jan 3, 2023</p>
                     <p class="posted-by">- Imee Duterte</p>
                 </li>
             </ul>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="project-meta">
-                    <p>{{ project.project_manager }}</p>
+                    <p>Project Manager: {{ project.project_manager }}</p>
                     <p>
                         Project Team:
                         {% with total=project.members.count %}
@@ -122,19 +122,24 @@
                     <p class="status">Status: <span class="status-ongoing">{{project.project_status}}</span></p>
                 </div>
                 <div class="project-actions">
-                    <button class="edit-btn">
+                    <a href="{% url 'core:aa' project.id %}" class="edit-btn">
                         <img src="{% static 'Images/edit-icon.png' %}" alt="Edit">
-                    </button>
-                    <button class="delete-btn">
+                    </a>
+
+                    <form action="{% url 'core:delete_project' project.id %}" method="post" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="delete-btn" onclick="return confirm('Are you sure you want to delete this project?');">
                         <img src="{% static 'Images/delete-icon.png' %}" alt="Delete">
                     </button>
+                </form>
+                
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
-</div>
-
     <script src="{% static 'js/sidebar.js' %}"></script>
     <script src="{% static 'js/adprojpage.js' %}"></script>
 </body>
 </html>
+  
